recursion.logo.tree.Tree.scala.error
Compilation error:
Tree:9: error: not found: value reculer
    reculer(length)
    ^